--- a/Phaser.html
+++ b/Phaser.html
@@ -166,7 +166,7 @@ function create ()
 
     //  Collisions
 
-    //this.physics.add.collider(player, wallLayer);
+    this.physics.add.collider(player, wallLayer);
     //this.physics.add.collider(player, porteLayer);
     this.physics.add.collider(monster, wallLayer);
     this.physics.add.collider(monster2, wallLayer);
