--- a/Phaser.html
+++ b/Phaser.html
@@ -167,7 +167,7 @@ function create ()
     //  Collisions
 
     this.physics.add.collider(player, wallLayer);
-    //this.physics.add.collider(player, porteLayer);
+    this.physics.add.collider(player, porteLayer);
     this.physics.add.collider(monster, wallLayer);
     this.physics.add.collider(monster2, wallLayer);
     this.physics.add.collider(monster3, wallLayer);
